--- a/classes/bard/index.html
+++ b/classes/bard/index.html
@@ -196,7 +196,9 @@
 <h2>裝備</h2>
 <div id="gear"><p class="NoIndent">
 	你的負載上限為 9+力量。<br/>
-	你起始擁有 地城口糧 (<tag>5 使用次數</tag> <tag>1 重量</tag>)。選擇一項樂器，這些樂器對你來說都被視為 <tag>0 重量</tag>：</p>
+	你起始擁有 地城口糧 (<tag>5 使用次數</tag> <tag>1 重量</tag>)。</p>
+
+選擇一項樂器，這些樂器對你來說都被視為 <tag>0 重量</tag>：
 <ul>
 	<li class="Option">你父親的曼陀林，已被修復完好</li>
 	<li class="Option">一名貴族所贈送的精美魯特琴</li>
@@ -204,18 +206,15 @@
 	<li class="Option">偷來的號角</li>
 	<li class="Option">一把從未被演奏過的小提琴</li>
 	<li class="Option">一本失傳的歌集</li></ul>
-
-<p class="NoIndent">選擇你的衣著：</p>
+選擇你的衣著：
 <ul>
 	<li class="Option">皮甲 (<span class="Tags">1 護甲, 1 重量</span>)</li>
 	<li class="Option">浮誇華美的衣服 (<span class="Tags">0 重量</span>)</li></ul>
-
-<p class="NoIndent">選擇你的武器：</p>
+選擇你的武器：
 <ul>
 	<li class="Option">決鬥刺劍 (<span class="Tags">近身, 靈巧, 2 重量</span>)</li>
 	<li class="Option">劣質弓 (<span class="Tags">短程, 2 重量</span>), 一綑箭矢 (<span class="Tags">3 彈藥, 1 重量</span>), 和 短劍 (<span class="Tags">近身, 1 重量</span>)</li></ul>
-
-<p class="NoIndent">選擇一項：</p>
+選擇一項：
 <ul>
 	<li>探險工具組 (<span class="Tags">5 使用次數, 1 重量</span>)</li>
 	<li>繃帶 (<span class="Tags">3 使用次數, 緩慢, 0 重量</span>)</li>
@@ -246,7 +245,7 @@
 <div class="Move"><h3 class="MoveName">超越極限 (It Goes To Eleven)</h3>
 <p class="NoIndent">
 	當你<strong>釋放出一段令人瘋狂的表演</strong>時（比如說一段驚豔的魯特琴獨奏、或是充滿力量銅管音爆），選擇一個能聽見你聲音的目標，並擲+魅力：<br/>
-	✴擲出10+時，目標會攻擊距離他們範圍內最近的同伴。
+	✴擲出10+時，目標會攻擊距離他們範圍內最近的同伴。<br/>
 	✴擲出7-9時，他們仍然會攻擊距離他們最近的同伴，但你也同時引起他們的注意和憤怒。</p></div>
 
 <div class="Move"><h3 class="MoveName">金屬咆哮 (Metal Hurlant)</h3>
