--- a/classes/cleric/index.html
+++ b/classes/cleric/index.html
@@ -145,61 +145,78 @@
 
 <div id="classmoves"><p class="Instructions">你起始還擁有以下動作：</p>
 <div id="Deity"><div class="Move"><h3 class="BasicMoveName">神祇 (Deity)</h3>
-<p class="NoIndent">You serve and worship some deity or power which grants you spells. Give your god a name (maybe Helferth, Sucellus, Zorica or Krugon the Bleak) and choose your deity’s domain:</p>
-<ul><li class="Option">Healing and Restoration</li>
-<li class="Option">Bloody Conquest</li>
-<li class="Option">Civilization</li>
-<li class="Option">Knowledge and Hidden Things</li>
-<li class="Option">The Downtrodden and Forgotten</li>
-<li class="Option">What Lies Beneath</li></ul>
-<p class="NoIndent">Choose one precept of your religion:</p>
-<ul><li class="Option">Your religion preaches the sanctity of suffering, add Petition: Suffering</li>
-<li class="Option">Your religion is cultish and insular, add Petition: Gaining Secrets</li>
-<li class="Option">Your religion has important sacrificial rites, add Petition: Offering</li>
-<li class="Option">Your religion believes in trial by combat, add Petition: Personal Victory</li></ul></div></div>
+<p class="NoIndent">
+	你侍奉且崇拜某個能夠授予你法術的神祇或高位力量。為你的神祇取一個名字（例如赫爾佛司、蘇賽勒斯、佐理卡、或荒神庫魯貢），並選擇你神祇司掌的領域：</p>
+<ul>
+	<li class="Option">治療和恢復</li>
+	<li class="Option">嗜血征戰</li>
+	<li class="Option">文明</li>
+	<li class="Option">知識與秘匿之物</li>
+	<li class="Option">被踐踏與被遺忘者</li>
+	<li class="Option">深埋地底之物</li></ul>
+<p class="NoIndent">選擇一項你所屬宗教的戒律：</p>
+<ul>
+	<li class="Option">你的宗教宣揚苦難的聖性，獲得<b>祈願：承受苦難</b></li>
+	<li class="Option">你的宗教異端而孤立，獲得<b>祈願：獲取祕密</b></li>
+	<li class="Option">你的宗教擁有重要的祭祀儀式，獲得<b>祈願：奉獻給予</b></li>
+	<li class="Option">你的宗教信奉以戰鬥作為試煉，獲得<b>祈願：個人勝利</b></li></ul></div></div>
 
 <div class="Move"><div id="DivineGuidance"><h3 class="BasicMoveName">神聖啟示 (Divine Guidance)</h3>
-<p class="NoIndent">When you <strong>petition your deity according to the precept of your religion</strong>, you are granted some useful knowledge or boon related to your deity’s domain. The GM will tell you what.</p></div></div>
+<p class="NoIndent">
+	當你<strong>依據你宗教的戒律向神祇祈願</strong>時，祂將賜予你一些與神祇司掌領域有關的實用情報或恩賜。GM會告訴你那是什麼。</p></div></div>
 
 <div class="Move"><div id="TurnUndead"><h3 class="BasicMoveName">驅散死靈 (Turn Undead)</h3>
-<p class="NoIndent">When you <strong>hold your holy symbol aloft and call on your deity for protection</strong>, roll+Wis. ✴On a 7+, so long as you continue to pray and brandish your holy symbol, no undead may come within reach of you. ✴On a 10+, you also momentarily daze intelligent undead and cause mindless undead to flee. Aggression breaks the effects and they are able to act as normal. Intelligent undead may still find ways to harry you from afar. They’re clever like that.</p></div></div>
+<p class="NoIndent">
+	當你<strong>高舉你的聖徽並呼喚神祇的庇護</strong>時，擲+睿知：<br/>
+	✴擲出7+時，只要你仍持續祈禱並揮動聖徽，就沒有不死生物能夠靠近你。<br/>
+	✴擲出10+時，你還可以暫時讓擁有智能的不死生物感到茫然暈眩，並讓沒有心智的不死生物逃跑。<br/>
+	侵略性的行為將破除這個效果並讓它們得以正常行動。聰明的不死生物或許仍能找到方法從遠處對付你，它們就是這麼聰明。</p></div></div>
+
 <div class="Move"><div id="Commune"><h3 class="BasicMoveName">通神 (Commune)</h3>
-<p class="NoIndent">When you <strong>spend uninterrupted time (an hour or so) in quiet communion with your deity</strong>, you:</p>
-<ul><li>Lose any spells already granted to you.</li>
-<li>Are granted new spells of your choice whose total levels don’t exceed your own level+1, and none of which is a higher level than your own level.</li>
-<li>Prepare all of your rotes, which never count against your limit.</li></ul></div></div>
+<p class="NoIndent">
+	當你<strong>花費一段時間（一小時以上）不被打擾地安靜與神祇溝通</strong>，你將：</p>
+<ul>
+	<li>失去所有你已經被授予的法術。</li>
+	<li>被授予你所選擇的新法術，其等級總和不能超過你自身的等級+1，且每個法術的等級都不能高於你自身的等級。</li>
+	<li>準備好你所有的禱念。禱念永遠不會被計入你的準備法術上限。</li></ul></div></div>
+
 <div class="Move"><div id="CastASpell"><h3 class="BasicMoveName">施放法術 (Cast a Spell)</h3>
-<p class="NoIndent">When you <strong>unleash a spell granted to you by your deity</strong>, roll+Wis. ✴On a 10+, the spell is successfully cast and your deity does not revoke the spell, so you may cast it again. ✴On a 7–9, the spell is cast, but choose one:</p>
-<ul><li>You draw unwelcome attention or put yourself in a spot. The GM will tell you how.</li>
-<li>Your casting distances you from your deity—take -1 ongoing to cast a spell until the next time you commune.</li>
-<li>After you cast it, the spell is revoked by your deity. You cannot cast the spell again until you commune and have it granted to you.</li></ul>
-<p class="NoIndent">Note that maintaining spells with ongoing effects will sometimes cause a penalty to your roll to cast a spell.</p></div></div></div></div>
+<p class="NoIndent">
+	當你<strong>施放一個你神祇所授予的法術</strong>時，擲+睿知：<br/>
+	✴擲出10+時，該法術被成功施放，且你的神祇並未收回該法術，因此你之後仍可以再次施展該法術。<br/>
+	✴擲出7-9時，該法術被施放，但你必須選擇一項：</p>
+<ul>
+	<li>你引來了不必要的注意、或將自己置身危險當中。GM會告訴你發生了什麼事。</li>
+	<li>你施放法術的行為使你遠離神祇──直到下次你進行通神動作之前，你的施放法術動作將獲得持續-1。</li>
+	<li>在你施法後，該法術被你的神祇收回。直到你下次進行通神動作並再次選擇被授予該法術之前，你都無法再次施放該法術。</li></ul>
+<p class="NoIndent">
+	注意，維持一個帶有<tag>持續</tag>標籤的法術效果有時也導致你在進行施放法術動作時承受減值。</p></div></div></div></div>
 <hr/>
 
 <h2>陣營</h2>
 <p class="InstructionsAfterHeader">選擇一個陣營：</p>
 <div id="alignment"><div class="Move"><h3 class="MoveName">善良</h3>
-<p class="NoIndent">Endanger yourself to heal another.</p></div>
+<p class="NoIndent">為了治療他人而使自己置身危險之中。</p></div>
 <div class="Move"><h3 class="MoveName">守序</h3>
-<p class="NoIndent">Endanger yourself following the precepts of your church or god.</p></div>
+<p class="NoIndent">為了遵循教會或神明的戒律而使自己置身危險之中。</p></div>
 <div class="Move"><h3 class="MoveName">邪惡</h3>
-<p class="NoIndent">Harm another to prove the superiority of your church or god.</p></div></div>
+<p class="NoIndent">傷害他人以證明你的教會或神明比他人優越。</p></div></div>
 <hr/>
 
 <h2>裝備</h2>
 <div id="gear"><p class="NoIndent">
 	你的負載上限為 10+力量。<br/>
 	你起始擁有 地城口糧 (<tag>5 使用次數</tag> <tag>1 重量</tag>) 和一些聖徽，樣式由你描述 (<tag>0 重量</tag>)。</p>
-<p class="NoIndent">選擇你的防具：</p>
+選擇你的防具：
 <ul>
 	<li class="Option">鏈甲 (<span class="Tags">1 護甲, 1 重量</span>)</li>
 	<li class="Option">盾牌 (<span class="Tags">+1 護甲, 2 重量</span>)</li></ul>
-<p class="NoIndent">選擇你的武器：</p>
+選擇你的武器：
 <ul>
 	<li class="Option">戰鎚 (<span class="Tags">近身, 1 重量</span>)</li>
 	<li class="Option">釘頭鎚 (<span class="Tags">近身, 1 重量</span>)</li>
 	<li class="Option">長杖 (<span class="Tags">近身, 雙手, 1 重量</span>) 和 繃帶 (<span class="Tags">3 使用次數, 緩慢, 0 重量</span>)</li></ul>
-<p class="NoIndent">選擇一項：</p>
+選擇一項：
 <ul>
 	<li class="Option">探險工具組 (<span class="Tags">5 使用次數, 1 重量</span>) 和 地城口糧 (<span class="Tags">5 使用次數, 1 重量</span>)</li>
 	<li class="Option">治療藥水 (<span class="Tags">0 重量</span>)</li></ul></div>
@@ -215,58 +232,101 @@
 
 <h2>進階動作</h2>
 <div id="moves"><p class="InstructionsAfterHeader">當你的等級升至2~5，從下列動作中選擇：</p>
+
 <div class="Move"><h3 class="MoveName">天選者 (Chosen One)</h3>
-<p class="NoIndent">Choose one spell. You are granted that spell as if it was one level lower.</p></div>
-<div class="Move"><h3 class="MoveName">Invigorate</h3>
-<p class="NoIndent">When you <strong>heal someone</strong> they take +2 forward to their damage.</p></div>
-<div class="Move"><h3 class="MoveName">The Scales of Life and Death</h3>
-<p class="NoIndent">When <strong>someone takes their last breath in your presence</strong>, they take +1 to the roll.</p></div>
-<div class="Move"><h3 class="MoveName">Serenity</h3>
-<p class="NoIndent">When you cast a spell you ignore the first -1 penalty from ongoing spells.</p></div>
-<div class="Move"><h3 class="MoveName">First Aid</h3>
-<p class="NoIndent">Cure Light Wounds is a rote for you, and therefore doesn’t count against your limit of granted spells.</p></div>
-<div class="Move"><h3 class="MoveName">Divine Intervention</h3>
-<p class="NoIndent">When you commune you get 1 hold and lose any hold you already had. Spend that hold when you or an ally takes damage to call on your deity, they intervene with an appropriate manifestation (a sudden gust of wind, a lucky slip, a burst of light) and negate the damage.</p></div>
-<div class="Move"><h3 class="MoveName">Penitent</h3>
-<p class="NoIndent">When you <strong>take damage and embrace the pain</strong>, you may take +1d4 damage (ignoring armor). If you do, take +1 forward to cast a spell.</p></div>
-<div class="Move"><h3 class="MoveName">Empower</h3>
-<p class="NoIndent">When you cast a spell, on a 10+ you have the option of choosing from the 7–9 list. If you do, you may choose one of these effects as well:</p>
-<ul><li>The spell’s effects are doubled</li>
-<li>The spell’s targets are doubled</li></ul></div>
-<div class="Move"><h3 class="MoveName">Orison for Guidance</h3>
-<p class="NoIndent">When you <strong>sacrifice something of value to your deity and pray for guidance</strong>, your deity tells you what it would have you do. If you do it, mark experience.</p></div>
-<div class="Move"><h3 class="MoveName">Divine Protection</h3>
-<p class="NoIndent">When you wear no armor or shield you get 2 armor.</p></div>
-<div class="Move"><h3 class="MoveName">Devoted Healer</h3>
-<p class="NoIndent">When you heal someone else of damage, add your level to the amount of damage healed.</p></div>
+<p class="NoIndent">
+	選擇一個法術。當你被授予該法術時，將該法術的等級視作比原本低一級。</p></div>
+
+<div class="Move"><h3 class="MoveName">振奮鼓舞 (Invigorate)</h3>
+<p class="NoIndent">
+	當你<strong>治療某人</strong>時，他們的傷害將獲得下次+2。</p></div>
+
+<div class="Move"><h3 class="MoveName">生死天秤 (The Scales of Life and Death)</h3>
+<p class="NoIndent">
+	當<strong>某人在你面前進行臨死一息動作</strong>時，他們在該動作的擲骰將獲得 +1 加值。</p></div>
+
+<div class="Move"><h3 class="MoveName">沉著心 (Serenity)</h3>
+<p class="NoIndent">
+	當你進行施放法術動作時，你可以忽略第一個來自持續性法術的 -1 減值。</p></div>
+
+<div class="Move"><h3 class="MoveName">急救 (First Aid)</h3>
+<p class="NoIndent">對你而言，<u>治療輕傷</u>法術將被視作禱念，並因此不會被入你被授予法術的限制。</p></div>
+
+<div class="Move"><h3 class="MoveName">神力干預 (Divine Intervention)</h3>
+<p class="NoIndent">
+	當你進行通神動作時，你獲得 1掌握，並失去任何你已經擁有的掌握。當你或你的同伴受到傷害時，你可以消耗掌握來呼喚你的神祇，祂們將透過適當的神蹟介入干預（突然颳起的神風、幸運滑倒、或一道閃光），並抵銷該傷害。</p></div>
+
+<div class="Move"><h3 class="MoveName">懺悔者 (Penitent)</h3>
+<p class="NoIndent">
+	當你<strong>承受傷害並擁抱苦痛</strong>時，你可以選擇額外承受 +1d4 傷害（無視護甲）。若你這麼做，則你下次施放法術+1。</p></div>
+
+<div class="Move"><h3 class="MoveName">強效神術 (Empower)</h3>
+<p class="NoIndent">
+	當你進行施展法術動作時，即使你擲出10+結果，你也可以選擇7-9結果的選項。如果你這麼做，你可以從下列效果中選擇一項：</p>
+<ul>
+	<li>該法術的效果變為兩倍。</li>
+	<li>該法術影響的目標數量變為兩倍。</li></ul></div>
+
+<div class="Move"><h3 class="MoveName">祈求神導 (Orison for Guidance)</h3>
+<p class="NoIndent">
+	當你<strong>向你的神祇獻上有價值的供物並祈求引導</strong>時，你的神祇將會指示你祂希望你去做什麼。如果你遵從指示，標記一點經驗值。</p></div>
+
+<div class="Move"><h3 class="MoveName">神聖保護 (Divine Protection)</h3>
+<p class="NoIndent">
+	當你不穿戴任何防具或盾牌時，你獲得 +2 護甲值。</p></div>
+
+<div class="Move"><h3 class="MoveName">虔誠醫者 (Devoted Healer)</h3>
+<p class="NoIndent">
+	當你<strong>治療其他人身上的傷害</strong>時，你額外治療等同你自身等級的傷害。</p></div>
+
+
 <p class="Instructions">當你的等級升至6~10，從下列動作或等級2~5的動作中選擇：</p>
+
 <div class="Move"><h3 class="MoveName">受膏者 (Anointed)</h3>
-<p class="Requirement">Requires: Chosen One</p>
-<p class="NoIndent">Choose one spell in addition to the one you picked for chosen one. You are granted that spell as if it was one level lower.</p></div>
-<div class="Move"><h3 class="MoveName">Apotheosis</h3>
-<p class="NoIndent">The first time you <strong>spend time in prayer as appropriate to your god</strong> after taking this move, choose a feature associated with your deity (rending claws, wings of sapphire feathers, an all-seeing third eye, etc.). When you emerge from prayer, you permanently gain that physical feature.</p></div>
-<div class="Move"><h3 class="MoveName">Reaper</h3>
-<p class="NoIndent">When you <strong>take time after a conflict to dedicate your victory to your deity and deal with the dead</strong>, take +1 forward.</p></div>
-<div class="Move"><h3 class="MoveName">Providence</h3>
-<p class="Requirement">Replaces: Serenity</p>
-<p class="NoIndent">You ignore the -1 penalty from two spells you maintain.</p></div>
-<div class="Move"><h3 class="MoveName">Greater First Aid</h3>
-<p class="Requirement">Requires: First Aid</p>
-<p class="NoIndent">Cure Moderate Wounds is a rote for you, and therefore doesn’t count against your limit of granted spells.</p></div>
-<div class="Move"><h3 class="MoveName">Divine Invincibility</h3>
-<p class="Requirement">Replaces: Divine Intervention</p>
-<p class="NoIndent">When you commune you gain 2 hold and lose any hold you already had. Spend that hold when you or an ally takes damage to call on your deity, who intervenes with an appropriate manifestation (a sudden gust of wind, a lucky slip, a burst of light) and negates the damage.</p></div>
-<div class="Move"><h3 class="MoveName">Martyr</h3>
-<p class="Requirement">Replaces: Penitent</p>
-<p class="NoIndent">When you <strong>take damage and embrace the pain</strong>, you may take +1d4 damage (ignoring armor). If you do, take +1 forward to cast a spell and add your level to any damage done or healed by the spell.</p></div>
-<div class="Move"><h3 class="MoveName">Divine Armor</h3>
-<p class="Requirement">Replaces: Divine Protection</p>
-<p class="NoIndent">When you wear no armor or shield you get 3 armor.</p></div>
-<div class="Move"><h3 class="MoveName">Greater Empower</h3>
-<p class="Requirement">Replaces: Empower</p>
-<p class="NoIndent">When you cast a spell, on a 10–11 you have the option of choosing from the 7–9 list. If you do, you may choose one of these effects as well. On a 12+ you get to choose one of these effects for free.</p>
-<ul><li>The spell’s effects are doubled</li>
-<li>The spell’s targets are doubled</li></ul></div>
+<p class="Requirement">需求: 天選者</p>
+<p class="NoIndent">
+	選擇一個法術（不能是你在天選者中所選的法術）。當你被授予該法術時，將該法術的等級視作比原本低一級。</p></div>
+
+<div class="Move"><h3 class="MoveName">神化 (Apotheosis)</h3>
+<p class="NoIndent">
+	當你在獲得這個動作後，首次<strong>在適當的時候花時間向你的神祈禱</strong>時，選擇一個你神祇相關的特徵（比如鋒銳利爪、天藍羽翼、看穿一切的第三隻眼，諸如此類）。當你完成祈禱時，你將永久獲得這個身體特徵。</p></div>
+
+<div class="Move"><h3 class="MoveName">收割者 (Reaper)</h3>
+<p class="NoIndent">
+	當你<strong>在戰鬥後花時間將勝利奉獻給你的神祇，並好好處理死者</strong>，你獲得下次擲骰+1。</p></div>
+
+<div class="Move"><h3 class="MoveName">深謀遠慮 (Providence)</h3>
+<p class="Requirement">取代: 沉著心</p>
+<p class="NoIndent">
+	你可以忽略二個你所維持法術的 -1 減值。</p></div>
+
+<div class="Move"><h3 class="MoveName">高等急救 (Greater First Aid)</h3>
+<p class="Requirement">需求: 急救</p>
+<p class="NoIndent">
+	對你而言，<u>治療中傷</u>法術將被視作禱念，並因此不會被入你被授予法術的限制。</p></div>
+
+<div class="Move"><h3 class="MoveName">神力無敵 (Divine Invincibility)</h3>
+<p class="Requirement">取代: 神力干預</p>
+<p class="NoIndent">
+	當你進行通神動作時，你獲得 2掌握，並失去任何你已經擁有的掌握。當你或你的同伴受到傷害時，你可以消耗掌握來呼喚你的神祇，祂們將透過適當的神蹟介入干預（突然颳起的神風、幸運滑倒、或一道閃光），並抵銷該傷害。</p></div>
+
+<div class="Move"><h3 class="MoveName">殉教者 (Martyr)</h3>
+<p class="Requirement">取代: 懺悔者</p>
+<p class="NoIndent">
+	當你<strong>承受傷害並擁抱苦痛</strong>時，你可以選擇額外承受 +1d4 傷害（無視護甲）。若你這麼做，則你下次施放法術+1，並將你的等級加到該法術造成或治療的傷害上。</p></div>
+
+<div class="Move"><h3 class="MoveName">神聖盔甲 (Divine Armor)</h3>
+<p class="Requirement">取代: 神聖保護</p>
+<p class="NoIndent">
+	當你不穿戴任何防具或盾牌時，你獲得 +3 護甲值。</p></div>
+
+<div class="Move"><h3 class="MoveName">高等強效神術 (Greater Empower)</h3>
+<p class="Requirement">取代: 強效神術</p>
+<p class="NoIndent">
+	當你進行施展法術動作時，若擲出10-11，你可以選擇7-9結果中的選項。如果你這麼做，你可以從下列效果中選擇一項。若擲出12+，則你可以直接從下列效果中選擇一項。</p>
+<ul>
+	<li>該法術的效果變為兩倍。</li>
+	<li>該法術影響的目標數量變為兩倍。</li></ul></div>
 
 <div class="Move"><h3 class="MoveName">兼職新手 (Multiclass Dabbler)</h3>
 <p class="NoIndent">
