--- a/classes/druid/index.html
+++ b/classes/druid/index.html
@@ -115,30 +115,32 @@
 <p>你屬於神聖之所；你出生於母土，你的身上戴著她的靈魂之印。你可能也曾有過凡人的生活，或許你也像他們曾居於都城，如今卻已非如此。你拋棄了停滯的定型。聆聽你盟友對他們所雕神像的祈禱，聆聽他們的宗教寓言故事，講述他們將在早已被你拋棄的破爛小鎮中找回的榮耀。</p>
 <p>他們的諸神只是年幼的孩童，他們的鋼鐵只是虛假的保護。你走在古老的路上，披大地為衣。你會拿取屬於你的財寶，但你是否會走上與他們相同的路呢？只有時間知道。</p></div>
 <hr/>
-<h2>名稱 (Names)</h2>
-<div id="names"><p class="NoIndent"><em>Elf</em>: Hycorax, Ethanwe, Sinathel, Demanor, Menoliir, Mithralan, Taeros, Aegor</p>
-<p class="NoIndent"><em>Halfling</em>: Tanner, Dunstan, Rose, Ivy, Robard, Mab, Thistle, Puck, Anne, Serah</p>
-<p class="NoIndent"><em>Human</em>: Elana, Obelis, Herran, Syla, Andanna, Siobhan, Aziz, Pelin, Sibel, Nils, Wei</p></div>
+<h2>名稱</h2>
+<div id="names"><p class="NoIndent"><b>精靈</b>: Hycorax, Ethanwe, Sinathel, Demanor, Menoliir, Mithralan, Taeros, Aegor</p>
+<p class="NoIndent"><b>半身人</b>: Tanner, Dunstan, Rose, Ivy, Robard, Mab, Thistle, Puck, Anne, Serah</p>
+<p class="NoIndent"><b>人類</b>: Elana, Obelis, Herran, Syla, Andanna, Siobhan, Aziz, Pelin, Sibel, Nils, Wei</p></div>
 <hr/>
-<h2>外觀 (Look)</h2>
+<h2>外觀</h2>
 <div id="look"><p class="InstructionsAfterHeader">從每列中各自選擇一項：</p>
 <p class="NoIndent">Wise Eyes, Wild Eyes, or Haunting Eyes</p>
 <p class="NoIndent">Furry Hood, Messy Hair, or Braided Hair</p>
 <p class="NoIndent">Ceremonial Garb, Practical Leathers, or Weathered Hides</p></div>
 <hr/>
-<h2>屬性數值 (Stats)</h2>
-<p class="NoIndent">Your maximum HP is 6+Constitution.</p>
-<p class="NoIndent">Your base damage is <span id="Damage">d6</span>.</p>
+<h2>屬性數值</h2>
+<p class="NoIndent">你的最大生命值為 6+體質值。</p>
+<p class="NoIndent">你的基礎傷害骰為 <span id="Damage">d6</span>。</p>
 <hr/>
-<h2>起始動作 (Starting Moves)</h2>
-<div id="startingmoves"><p class="InstructionsAfterHeader">Choose a race and gain the corresponding move:</p>
-<div id="racialmoves"><div class="Move"><h3 class="MoveName">Elf</h3>
+<h2>起始動作</h2>
+<div id="startingmoves"><p class="InstructionsAfterHeader">選擇一個種族並獲得相應的動作：</p>
+<div id="racialmoves">
+<div class="Move"><h3 class="MoveName">精靈</h3>
 <p class="NoIndent">The sap of the elder trees flows within you. In addition to any other attunements, the Great Forest is always considered your land.</p></div>
-<div class="Move"><h3 class="MoveName">Human</h3>
+<div class="Move"><h3 class="MoveName">人類</h3>
 <p class="NoIndent">As your people learned to bind animals to field and farm, so too are you bound to them. You may always take the shape of any domesticated animal, in addition to your normal options.</p></div>
-<div class="Move"><h3 class="MoveName">Halfling</h3>
+<div class="Move"><h3 class="MoveName">半身人</h3>
 <p class="NoIndent">You sing the healing songs of spring and brook. When you make camp, you and your allies heal +1d6.</p></div></div>
-<div id="classmoves"><p class="Instructions">You start with these moves:</p>
+
+<div id="classmoves"><p class="Instructions">你起始還擁有以下動作：</p>
 <div class="Move"><div id="BornoftheSoil"><h3 class="BasicMoveName">Born of the Soil</h3>
 <p class="NoIndent">You learned your magic in a place whose spirits are strong and ancient and they’ve marked you as one of their own. No matter where you go, they live within you and allow you to take their shape. Choose one of the following. It is the land to which you are attuned—when shapeshifting you may take the shape of any animal who might live in your Land.</p>
 <ul><li class="Option">The Great Forests</li>
@@ -163,24 +165,32 @@
 <div class="Move"><div id="StudiedEssence"><h3 class="BasicMoveName">Studied Essence</h3>
 <p class="NoIndent">When you <strong>spend time in contemplation of an animal spirit</strong>, you may add its species to those you can assume using shapeshifting.</p></div></div></div></div>
 <hr/>
-<h2>陣營 (Alignment)</h2>
-<p class="InstructionsAfterHeader">Choose an alignment:</p>
-<div id="alignment"><div class="Move"><h3 class="MoveName">Chaotic</h3>
+
+<h2>陣營</h2>
+<p class="InstructionsAfterHeader">選擇一個陣營：</p>
+<div id="alignment">
+<div class="Move"><h3 class="MoveName">混亂</h3>
 <p class="NoIndent">Destroy a symbol of civilization.</p></div>
-<div class="Move"><h3 class="MoveName">Good</h3>
+<div class="Move"><h3 class="MoveName">善良</h3>
 <p class="NoIndent">Help something or someone grow.</p></div>
-<div class="Move"><h3 class="MoveName">Neutral</h3>
+<div class="Move"><h3 class="MoveName">中立</h3>
 <p class="NoIndent">Eliminate an unnatural menace.</p></div></div>
 <hr/>
-<h2>裝備 (Gear)</h2>
-<div id="gear"><p class="NoIndent">Your load is 6+Str. You carry some token of your land, describe it. Choose your defenses:</p>
-<ul><li class="Option">Hide armor (1 armor, 1 weight)</li>
-<li class="Option">Wooden shield (+1 armor, 1 weight)</li></ul>
-Choose your armament:
-<ul><li class="Option">Shillelagh (close, 2 weight)</li>
-<li class="Option">Staff (close, two-handed, 1 weight)</li>
-<li class="Option">Spear (close, thrown, near, 1 weight)</li></ul>
-Choose one:
+
+<h2>裝備</h2>
+<div id="gear"><p class="NoIndent">
+	你的負載上限為 6+力量。<br/>
+	你起始擁有 一些象徵你土地的信物，樣式由你描述。</p>
+選擇你的防具：
+<ul>
+	<li class="Option">Hide armor (1 armor, 1 weight)</li>
+	<li class="Option">Wooden shield (+1 armor, 1 weight)</li></ul>
+選擇你的武器：
+<ul>
+	<li class="Option">Shillelagh (close, 2 weight)</li>
+	<li class="Option">Staff (close, two-handed, 1 weight)</li>
+	<li class="Option">Spear (close, thrown, near, 1 weight)</li></ul>
+選擇一項：
 <ul><li class="Option">Adventuring gear (1 weight)</li>
 <li class="Option">Poultices and herbs (2 uses, 1 weight)</li>
 <li class="Option">Halfling pipeleaf (0 weight)</li>
