--- a/playing_the_game/index.html
+++ b/playing_the_game/index.html
@@ -321,7 +321,7 @@
 <p>
 	施放法術的行動涉及了呼求神祇，吟誦咒文，揮舞雙手，援引神秘力量等等。若你打算施放法術，你通常會需要進行<b>施放法術</b>這個動作。擲出10+時，法術將發揮效果。擲出7-9時，法術仍會被施放，但施術者將發現他們身陷麻煩，且必須立刻做出抉擇。某些法術具有<tag>持續</tag>標籤──它們一旦被施放就會一直持續發揮效果，直到某些事件使它終止。</p>
 <p>
-	擲出7-9時的其中一個選項，是讓該法術被撤銷（若你是牧師）、或被遺忘（若你是法師）。一個被撤銷或遺忘的法術仍然屬於已知法術，但不再被視為做好準備，因此直到你下一次重新準備，該法術都無法再被施放。當施法者下次再進行<b>通神</b>或<b>準備法術</b>動作時，他們仍然可以再次選擇該法術加以準備。</p>
+	擲出7-9時的其中一個選項，是讓該法術被神祇收回（若你是牧師）、或被遺忘（若你是法師）。一個被收回或遺忘的法術仍然屬於已知法術，但不再被視為做好準備，因此直到你下一次重新準備，該法術都無法再被施放。當施法者下次再進行<b>通神</b>或<b>準備法術</b>動作時，他們仍然可以再次選擇該法術加以準備。</p>
 <hr/>
 
 
