--- a/classes/fighter/index.html
+++ b/classes/fighter/index.html
@@ -117,34 +117,38 @@
 <p>你這麼做是為了膽識與榮耀，是為了戰鬥的呼嘯、以及那熾熱的鮮血。你是鐵打的猛獸。你的朋友或許帶著鋼鑄的鋒刃，然而，戰士，你本身就是鋼鐵。當你的旅伴在荒野營火旁抱怨著他們的傷口，你則驕傲的背起自己的傷疤。</p>
 <p>你即是銅牆鐵壁－－任憑所有撲向你的危險灰飛煙滅。最終，你會是站到最後的那一個。</p></div>
 <hr/>
-<h2>名稱 (Names)</h2>
-<div id="names"><p  class="NoIndent"><em>Dwarf</em>: 歐茲魯克(Ozruk), Surtur, Brunhilda, Annika, Janos, Greta, Dim, Rundrig, 賈爾(Jarl), 索圖庫(Xotoq)</p>  
-<p class="NoIndent"><em>Elf</em>: Elohiir, Sharaseth, Hasrith, Shevaral, 凱杜斯(Cadeus), Eldar, Kithracet, 緹里恩(Thelian)</p>    
-<p class="NoIndent"><em>Halfling</em>: Finnegan, Olive, Randolph, 巴特比(Bartleby), Aubrey, Baldwin, Becca</p> 
-<p class="NoIndent"><em>Human</em>: Hawke, Rudiger, 葛瑞格(Gregor), 布莉安娜(Brianne), Walton, Castor, Shanna, Ajax, Hob</p></div>
+
+<h2>名稱</h2>
+<div id="names"><p  class="NoIndent"><b>矮人</b>: 歐茲魯克(Ozruk), Surtur, Brunhilda, Annika, Janos, Greta, Dim, Rundrig, 賈爾(Jarl), 索圖庫(Xotoq)</p>  
+<p class="NoIndent"><b>精靈</b>: Elohiir, Sharaseth, Hasrith, Shevaral, 凱杜斯(Cadeus), Eldar, Kithracet, 緹里恩(Thelian)</p>    
+<p class="NoIndent"><b>半身人</b>: Finnegan, Olive, Randolph, 巴特比(Bartleby), Aubrey, Baldwin, Becca</p> 
+<p class="NoIndent"><b>人類</b>: Hawke, Rudiger, 葛瑞格(Gregor), 布莉安娜(Brianne), Walton, Castor, Shanna, Ajax, Hob</p></div>
 <hr/>
-<h2>外觀 (Look)</h2>
+
+<h2>外觀</h2>
 <div id="look"><p class="InstructionsAfterHeader">從每列中各自選擇一項：</p>
 <p class="NoIndent">Hard Eyes, Dead Eyes, or Eager Eyes</p>
 <p class="NoIndent">Wild Hair, Shorn Hair, or Battered Helm</p>
 <p class="NoIndent">Calloused Skin, Tanned Skin, or Scarred Skin</p>
 <p class="NoIndent">Built Body, Lithe Body, or Ravaged Body</p></div>
 <hr/>
-<h2>屬性數值 (Stats)</h2>
-<p class="NoIndent">Your maximum HP is 10+Constitution.</p>
-<p class="NoIndent">Your base damage is <span id="Damage">d10</span>.</p>
+
+<h2>屬性數值</h2>
+<p class="NoIndent">你的最大生命值為 10+體質值。</p>
+<p class="NoIndent">你的基礎傷害骰為 <span id="Damage">d10</span>。</p>
 <hr/>
-<h2>起始動作 (Starting Moves)</h2>
-<div id="startingmoves"><p class="InstructionsAfterHeader">Choose a race and gain the corresponding move:</p>
-<div id="racialmoves"><div class="Move"><h3 class="MoveName">Dwarf</h3>
+
+<h2>起始動作</h2>
+<div id="startingmoves"><p class="InstructionsAfterHeader">選擇一個種族並獲得相應的動作：</p>
+<div id="racialmoves"><div class="Move"><h3 class="MoveName">矮人</h3>
 <p class="NoIndent">When you <strong>share a drink with someone</strong>, you may parley with them using CON instead of CHA.</p></div>
-<div class="Move"><h3 class="MoveName">Elf</h3>
+<div class="Move"><h3 class="MoveName">精靈</h3>
 <p class="NoIndent">Choose one weapon—you can always treat weapons of that type as if they had the precise tag.</p></div>
-<div class="Move"><h3 class="MoveName">Halfling</h3>
+<div class="Move"><h3 class="MoveName">半身人</h3>
 <p class="NoIndent">When you defy danger and <strong>use your small size to your advantage</strong>, take +1.</p></div>
-<div class="Move"><h3 class="MoveName">Human</h3>
+<div class="Move"><h3 class="MoveName">人類</h3>
 <p class="NoIndent">Once per battle you may reroll a single damage roll (yours or someone else’s).</p></div></div>
-<div id="classmoves"><p class="Instructions">You start with these moves:</p>
+<div id="classmoves"><p class="Instructions">你起始還擁有以下動作：</p>
 <div class="Move"><h3 class="BasicMoveName">Bend Bars, Lift Gates</h3>
 <p class="NoIndent">When you <strong>use pure strength to destroy an inanimate obstacle</strong>, roll+Str. ✴On a 10+, choose 3. ✴On a 7-9 choose 2.</p>
 <ul><li>It doesn’t take a very long time</li>
@@ -182,34 +186,45 @@
 <li class="Option">Blood-stained</li>
 <li class="Option">Sinister</li></ul></div></div></div>
 <hr/>
-<h2>陣營 (Alignment)</h2>
-<p class="InstructionsAfterHeader">Choose an alignment:</p>
-<div id="alignment"><div class="Move"><h3 class="MoveName">Good</h3>
+
+
+<h2>陣營</h2>
+<p class="InstructionsAfterHeader">選擇一個陣營：</p>
+<div id="alignment"><div class="Move"><h3 class="MoveName">善良</h3>
 <p class="NoIndent">Defend those weaker than you.</p></div>
-<div class="Move"><h3 class="MoveName">Neutral</h3>
+<div class="Move"><h3 class="MoveName">中立</h3>
 <p class="NoIndent">Defeat a worthy opponent.</p></div>
-<div class="Move"><h3 class="MoveName">Evil</h3>
+<div class="Move"><h3 class="MoveName">邪惡</h3>
 <p class="NoIndent">Kill a defenseless or surrendered enemy.</p></div></div>
 <hr/>
-<h2>裝備 (Gear)</h2>
-<div id="gear"><p class="NoIndent">Your load is 12+Str. You carry your signature weapon and dungeon rations (5 uses, 1 weight). Choose your defenses:</p>
-<ul><li class="Option">Chainmail (1 armor, 1 weight) and adventuring gear (1 weight)</li>
-<li class="Option">Scale armor (2 armor, 3 weight)</li></ul>
-<p class="NoIndent">Choose two:</p>
-<ul><li class="Option">2 Healing potions (0 weight)</li>
-<li class="Option">Shield (+1 armor, 2 weight)</li>
-<li class="Option">Antitoxin (0 weight), dungeon rations (1 weight), and poultices and herbs (1 weight)</li>
-<li class="Option">22 coins</li></ul></div>
+
+
+<h2>裝備</h2>
+<div id="gear"><p class="NoIndent">
+	你的負載上限為 12+力量。<br/>
+	你起始擁有 你的招牌武器 和 地城口糧 (<tag>5 使用次數</tag> <tag>1 重量</tag>)。</p>
+選擇你的防具：
+<ul>
+	<li class="Option">鏈甲 (<span class="Tags">1 護甲, 1 重量</span>) 和 探險工具組 (<span class="Tags">5 使用次數, 1 重量</span>)</li>
+	<li class="Option">鱗甲 (<span class="Tags">2 護甲, 3 重量</span>)</li></ul>
+選擇二項：
+<ul>
+	<li class="Option">2 治療藥水 (<span class="Tags">0 重量</span>)</li>
+	<li class="Option">盾牌 (<span class="Tags">+1 護甲, 2 重量</span>)</li>
+	<li class="Option">解毒劑 (<span class="Tags">0 重量</span>), 地城口糧 (<tag>5 使用次數</tag> <tag>1 重量</tag>), 和 藥膏和草藥 (<span class="Tags">2 使用次數, 緩慢, 1 重量</span>)</li>
+	<li class="Option">22 金幣</li></ul></div>
 <hr/>
-<h2>羈絆 (Bonds)</h2>
-<div id="bonds"><p class="NoIndent">Fill in the name of one of your companions in at least one:</p>
+
+
+<h2>羈絆</h2>
+<div id="bonds"><p class="NoIndent">在至少一個欄位中填入你其中一名同伴的名字：</p>
 <p>_______________ owes me their life, whether they admit it or not.</p>
 <p>I have sworn to protect _______________.</p>
 <p>I worry about the ability of _______________ to survive in the dungeon.</p>
 <p>_______________ is soft, but I will make them hard like me.</p></div>
 <hr/>
-<h2>進階動作 (Advanced Moves)</h2>
-<div id="moves"><p class="InstructionsAfterHeader">When you gain a level from 2-5, choose from these moves.</p>
+<h2>進階動作</h2>
+<div id="moves"><p class="InstructionsAfterHeader">當你的等級升至2~5，從下列動作中選擇：</p>
 <div class="Move"><h3 class="MoveName">Merciless</h3>
 <p class="NoIndent">When you deal damage, deal +1d4 damage.</p></div>
 <div class="Move"><h3 class="MoveName">Heirloom</h3>
@@ -230,7 +245,7 @@
 <p class="NoIndent">You gain +1 armor.</p></div>
 <div class="Move"><h3 class="MoveName">Blacksmith</h3>
 <p class="NoIndent">When you have access to a forge you can graft the magical powers of a weapon onto your signature weapon. This process destroys the magical weapon. Your signature weapon gains the magical powers of the destroyed weapon.</p></div>
-<p class="Instructions">When you gain a level from 6-10, choose from these moves or the level 2-5 moves.</p>
+<p class="Instructions">當你的等級升至6~10，從下列動作或等級2~5的動作中選擇：</p>
 <div class="Move"><h3 class="MoveName">Bloodthirsty</h3>
 <p class="Requirement">Replaces: Merciless</p>
 <p class="NoIndent">When you deal damage, deal +1d8 damage.</p></div>
@@ -287,6 +302,7 @@
             link_text = link_text.replace(/\<span class=\"Tags\"\>.*\<\/span\>/g, "");
           }
 
+          const eng_text = link_text.match(/\((.*)\)/)? link_text.match(/\((.*)\)/)[1]: link_text;
           link_text = link_text.replace(/\(.*\)/, "");
 
           if(tag=="H2" || tag=="H3"){
@@ -296,9 +312,8 @@
 
           current.addClass('anchor');
 
-          $("ul.currentul").append("<li class='currentli'><a id='link" + i + "' href='#title" +
-            i + "' title='" + tag + "'>" + 
-            link_text + "</a></li>");
+          var link_html = `<li class='currentli ${tag=="H1"? "headli": ""}'><a id='link${i}' href='#title${i}' title='${eng_text}'>${link_text}</a></li>`;
+          $("ul.currentul").append( link_html );
       });
       $(".Tags").each(function(i) {
         var current = $(this);
@@ -314,10 +329,10 @@
           }).join(" "));
       });
       $("#names p").each(function(i) {
-        var names_match = $(this).html().match(/(.+\: )(.+)/);
+        var names_match = $(this).html().match(/(.+\: )?(.+)/);
         if( names_match == null || names_match.length<3 ) return ;
         
-        var names_head = names_match[1];
+        var names_head = names_match[1]? names_match[1]: "";
         var names_arr = names_match[2].split(", ").map(context => {
           const name_match = context.match(/(.+)\((\w+)\)/);
           return name_match? `<n title="${name_match[2]}">${name_match[1]}</n>`: context;
