--- a/classes/ranger/index.html
+++ b/classes/ranger/index.html
@@ -188,7 +188,7 @@
 <li class="Option">Adventuring gear (1 weight) and bundle of arrows (3 ammo, 1 weight)</li></ul></div>
 <hr/>
 <h2>羈絆 (Bonds)</h2>
-<div id="bond"><p class="NoIndent">Fill in the name of one of your companions in at least one:</p>
+<div id="bond"><p class="NoIndent">在至少一個欄位中填入你其中一名同伴的名字：</p>
 <p>I have guided _______________ before and they owe me for it.</p>
 <p>_______________ is a friend of nature, so I will be their friend as well.</p>
 <p>_______________ has no respect for nature, so I have no respect for them.</p>
@@ -275,6 +275,7 @@
             link_text = link_text.replace(/\<span class=\"Tags\"\>.*\<\/span\>/g, "");
           }
 
+          const eng_text = link_text.match(/\((.*)\)/)? link_text.match(/\((.*)\)/)[1]: link_text;
           link_text = link_text.replace(/\(.*\)/, "");
 
           if(tag=="H2" || tag=="H3"){
@@ -284,9 +285,8 @@
 
           current.addClass('anchor');
 
-          $("ul.currentul").append("<li class='currentli'><a id='link" + i + "' href='#title" +
-            i + "' title='" + tag + "'>" + 
-            link_text + "</a></li>");
+          var link_html = `<li class='currentli ${tag=="H1"? "headli": ""}'><a id='link${i}' href='#title${i}' title='${eng_text}'>${link_text}</a></li>`;
+          $("ul.currentul").append( link_html );
       });
       $(".Tags").each(function(i) {
         var current = $(this);
@@ -302,10 +302,10 @@
           }).join(" "));
       });
       $("#names p").each(function(i) {
-        var names_match = $(this).html().match(/(.+\: )(.+)/);
+        var names_match = $(this).html().match(/(.+\: )?(.+)/);
         if( names_match == null || names_match.length<3 ) return ;
         
-        var names_head = names_match[1];
+        var names_head = names_match[1]? names_match[1]: "";
         var names_arr = names_match[2].split(", ").map(context => {
           const name_match = context.match(/(.+)\((\w+)\)/);
           return name_match? `<n title="${name_match[2]}">${name_match[1]}</n>`: context;
